Link Wishlist view and BarangWishlist model

--- a/wishlist/templates/wishlist.html
+++ b/wishlist/templates/wishlist.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <h5>Nama: </h5>
-<p>Fill me!</p>
+<p>{{nama}}</p> {% comment %} Nama diambil dari context pada view {% endcomment %}
 
 <table>
     <tr>
@@ -11,6 +11,14 @@
     <th>Deskripsi</th>
     </tr>
     {% comment %} Tambahkan data di bawah baris ini {% endcomment %}
+    {% comment %} Cetak tabel dengan detail tiap anggota BarangWishlist {% endcomment %}
+    {% for barang in list_barang %}
+    <tr>
+        <th>{{barang.nama_barang}}</th>
+        <th>{{barang.harga_barang}}</th>
+        <th>{{barang.deskripsi}}</th>
+    </tr>
+    {% endfor %}
 </table>
 
 {% endblock content %}
