--- a/wishlist/templates/wishlist.html
+++ b/wishlist/templates/wishlist.html
@@ -20,6 +20,7 @@
     </tr>
     {% endfor %}
 </table>
+<h5>Sesi terakhir login: {{ last_login }}</h5>
 <button><a href="{% url 'wishlist:logout_user' %}">Logout</a></button>
 
 {% endblock content %}
