Improve content spacing and responsiveness

--- a/wishlist/templates/wishlist.html
+++ b/wishlist/templates/wishlist.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 {% comment %} Navbar {% endcomment %}
-<nav class="navbar navbar-expand-sm navbar-dark bg-primary">
+<nav class="navbar navbar-expand-sm navbar-dark bg-primary mb-3">
     <div class="container-fluid">
         <span class="navbar-brand mb-0 h1">{{nama}}</span>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar-top-buttons" aria-controls="navbar-top-buttons" aria-expanded="false" aria-label="Toggle navigation">
@@ -17,30 +17,31 @@
     </div>
 </nav>
 
-<h5>Nama: </h5>
-<p>{{nama}}</p> {% comment %} Nama diambil dari context pada view {% endcomment %}
+<div class="container-fluid">
+    <h5>Nama: </h5>
+    <p>{{nama}}</p> {% comment %} Nama diambil dari context pada view {% endcomment %}
 
-<table class="table table-striped table-hover table-bordered">
-    <thead>
-        <tr>
-            <th scope="col">Nama Barang</th>
-            <th scope="col">Harga Barang</th>
-            <th scope="col">Deskripsi</th>
-        </tr>
-    </thead>
-    {% comment %} Tambahkan data di bawah baris ini {% endcomment %}
-    {% comment %} Cetak tabel dengan detail tiap anggota BarangWishlist {% endcomment %}
-    <tbody class="table-group-divider">
-        {% for barang in list_barang %}
-        <tr>
-            <td>{{barang.nama_barang}}</td>
-            <td>{{barang.harga_barang}}</td>
-            <td>{{barang.deskripsi}}</td>
-        </tr>
-        {% endfor %}
-    </tbody>
-</table>
-<h5>Sesi terakhir login: {{ last_login }}</h5>
-<button type="button" class="btn btn-danger"><a href="{% url 'wishlist:logout_user' %}" style="text-decoration: none">Logout</a></button>
-
+    <table class="table table-striped table-hover table-bordered mx-auto">
+        <thead>
+            <tr>
+                <th scope="col">Nama Barang</th>
+                <th scope="col">Harga Barang</th>
+                <th scope="col">Deskripsi</th>
+            </tr>
+        </thead>
+        {% comment %} Tambahkan data di bawah baris ini {% endcomment %}
+        {% comment %} Cetak tabel dengan detail tiap anggota BarangWishlist {% endcomment %}
+        <tbody class="table-group-divider">
+            {% for barang in list_barang %}
+            <tr>
+                <td>{{barang.nama_barang}}</td>
+                <td>{{barang.harga_barang}}</td>
+                <td>{{barang.deskripsi}}</td>
+            </tr>
+            {% endfor %}
+        </tbody>
+    </table>
+    <p><b>Sesi terakhir login: {{ last_login }}</b></p>
+    <button type="button" class="btn btn-danger"><a href="{% url 'wishlist:logout_user' %}" style="text-decoration: none">Logout</a></button>
+</div>
 {% endblock content %}
