--- a/templates/base.html
+++ b/templates/base.html
@@ -10,6 +10,7 @@
   {% block meta %}
   {% endblock meta %}
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+  <script src="{% static 'js/jquery.serializejson.min.js' %}"></script>
 </head>
 
 <body>
