Use number input field for harga barang

--- a/wishlist/templates/wishlist_ajax.html
+++ b/wishlist/templates/wishlist_ajax.html
@@ -43,7 +43,7 @@
             </tr>
             <tr class="row mb-4">
                 <div class="form-floating col-lg-4 mb-2">
-                    <input type="text" name="harga_barang" required id="id_harga_barang" placeholder="Harga Barang" class="form-control"></textarea>
+                    <input type="number" name="harga_barang" required id="id_harga_barang" placeholder="Harga Barang" class="form-control"></textarea>
                     <label for="id_harga_barang" class="form-label">Harga Barang</label>
                 </div>
             </tr>
